@@ -8,6 +8,10 @@ Fixed bug backing up unreadable regular files when rdiff-backup is run
 by root on the source site and non-root on the destination side.
 (Reported by Troels Arvin and Arkadiusz Miskiewicz.)
 
+If there is data missing from the destination dir (for instance if a
+user mistakenly deletes it), only warn when restoring, instead of
+exiting with error.
+
 
 New in v0.12.3 (2003/08/08)
 ---------------------------
